# nekodl

./: .gitignore  Cargo.toml  config.json
.VSCodeCounter/2024-09-11_22-22-52/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: aria2.rs  database.rs  download.rs  event.rs  main.rs  rss.rs  state.rs  static_serv.rs  task.rs  torrent.rs  utils.rs
src/api/: add_bt_task.rs  add_rss_sub.rs  add_torrent_task.rs  auth.rs  get_rss_info.rs  get_rss_list.rs  get_torrent_info.rs  login.rs  mod.rs
src/api/config/: get_config.rs  mod.rs  set_config.rs
src/api/download/: add_torrent_task.rs  get_torrent_info.rs  mod.rs  status.rs
src/api/rss/: add_rss_sub.rs  get_item_torrent.rs  get_rss_info.rs  get_rss_list.rs  mod.rs
src/downloader/: mod.rs  rqbit.rs
webui/: .gitignore  package.json  pnpm-lock.yaml  rsbuild.config.mjs  rsbuild.config.ts  tsconfig.json
webui/src/: App.vue  api.ts  index.css  index.ts  router.ts  store.ts  utils.ts
webui/src/bindings/: Config.ts  TorrentOptions.ts
webui/src/components/: RssManager.vue  RssViewer.vue  SettingsEditor.vue
webui/src/views/: LoginView.vue  MainView.vue
