[package]
name = "aria2rss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87", features = ["backtrace"] }
aria2-ws = "0.5.0"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.12.7"
rss = "2.0.9"
rust-embed = "8.5.0"
salvo = { version = "0.71.1", features = ["affix-state", "anyhow", "cors"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
